--- a/src/style.css
+++ b/src/style.css
@@ -2,7 +2,6 @@
 body {
     background-color: rgb(15, 23, 42);
     color: white;
-    min-height: 100vh;
 }
 
 
@@ -60,8 +59,9 @@ body {
 }
 
 .left-top img {
-    width: 300px;
-    height: 300px;
+    /*for mobile devices*/
+    width: 250px;
+    height: 250px;
     border-radius: 50%;
 }
 
@@ -126,14 +126,15 @@ body {
     margin-bottom: 10px;
     /*for mobile devices*/
     text-align: center;
-    font-size: 3.2rem;
+    font-size: 2rem;
 }
 
 .right-top p {
     /*for mobile devices*/
-    font-size: 1.5rem;
-    text-align: left;
+    font-size: 1.2rem;
+    text-align: center;
     margin-bottom: 10px;
+
 } 
 
 
@@ -142,7 +143,7 @@ body {
 }
 
 .animated-text{
-    font-size: 2.5rem;
+    font-size: 2rem;
     font-weight: bold;
     text-align: center;
     margin-bottom: 10px;
@@ -229,10 +230,16 @@ body {
         font-size: 2.8rem;
     }
 
+    .left-top img {
+        width: 300px;
+        height: 300px;
+    }
     .left-part-buttons img{
         width: 30px;
         height: 30px;
         border-radius: 0;
         opacity: 0.5;
     }
+
+
 }
